# grammar_experiments

./: README.md
antlr4_repo_key_grammar/: README  README.md  RepoKey.g4  RepoKey_V2.g4  RepoQuery.g4
antlr4_repo_key_grammar/antlr4_cpp_runtime/: CMakeLists.txt  README
antlr4_repo_key_grammar/antlr4_cpp_runtime/lib/: libantlr4-runtime.so.4.7.2
antlr4_repo_key_grammar/antlr4_java_runtime/: README
antlr4_repo_key_grammar/cpp_test/: CMakeLists.txt  antlr4_cpp_runtime  main.cpp  repo_key_generated
antlr4_repo_key_grammar/grammars/: RepoKey.g4  RepoKey_V1.g4  RepoKey_V3.1.g4  RepoKey_V3.g4  RepoQuery.g4
antlr4_repo_key_grammar/output/Cpp/: RepoKey.interp  RepoKeyBaseListener.cpp  RepoKeyBaseListener.h  RepoKeyBaseVisitor.h  RepoKeyLexer.cpp  RepoKeyLexer.h  RepoKeyLexer.interp  RepoKeyLexer.tokens  RepoKeyListener.cpp  RepoKeyListener.h  RepoKeyParser.cpp  RepoKeyParser.h  RepoQuery.interp  RepoQuery.tokens  RepoQueryBaseVisitor.cpp  RepoQueryBaseVisitor.h  RepoQueryLexer.cpp  RepoQueryLexer.h  RepoQueryLexer.interp  RepoQueryLexer.tokens  RepoQueryParser.cpp  RepoQueryParser.h  RepoQueryVisitor.cpp  RepoQueryVisitor.h
antlr4_repo_key_grammar/output/Java/: RepoKey.tokens  (+11 more)
antlr4_repo_key_grammar/tools/: base.sh  compile_grammar.sh  draw_parse_tree.sh  dynamic_cast_to_static.sh  test_grammar_Cpp.sh  test_grammar_Java.sh  test_list_of_queries.sh
bison_repo_key_grammar/: README  repo_key.lex
bison_repo_key_grammar/output/: repo_key.lex.cpp  repo_key.yacc.cpp  repo_key.yacc.hpp
bison_repo_key_grammar/tools/: base.sh  compile_grammar.sh
repo_key_parser_lib/: CMakeLists.txt  README  README.md
repo_key_parser_lib/include/: RepoKeyBaseListener.h  RepoKeyListener.h  RepoKeyParser.h  RepoKeyVisitor.h
repo_key_parser_lib/prebuilt/: CMakeLists.txt
repo_key_parser_lib/prebuilt/antlr4_cpp_runtime-4.7.2/: CMakeLists.txt
repo_key_parser_lib/prebuilt/antlr4_cpp_runtime-4.7.2/lib/: README
repo_key_parser_lib/prebuilt/antlr4_cpp_runtime-4.7.2/lib/x86-gcc5.4/: libantlr4-runtime.so.4.7.2
repo_key_parser_lib/src/: RepoKeyBaseListener.cpp  RepoKeyBaseVisitor.cpp  RepoKeyParser.cpp  RepoKeyVisitor.cpp
(+4 files in other folders)
